--- a/spireplayer-unity.csproj
+++ b/spireplayer-unity.csproj
@@ -368,6 +368,12 @@
     <Compile Include="Assets\Source\Spire\Data\ScriptReference.cs" />
     <Compile Include="Assets\Source\Spire\Data\StaticData.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Activator\Activator.cs" />
+    <Compile Include="Assets\Source\Spire\IUX\Activator\ActivatorActivatedState.cs" />
+    <Compile Include="Assets\Source\Spire\IUX\Activator\ActivatorActivatingState.cs" />
+    <Compile Include="Assets\Source\Spire\IUX\Activator\ActivatorMonoBehaviour.cs" />
+    <Compile Include="Assets\Source\Spire\IUX\Activator\ActivatorReadyState.cs" />
+    <Compile Include="Assets\Source\Spire\IUX\Activator\ActivatorState.cs" />
+    <Compile Include="Assets\Source\Spire\IUX\Activator\IActivator.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Content\Anchor.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Content\AnchorReferenceFrameFactory.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Content\Content.cs" />
@@ -404,31 +410,25 @@
     <Compile Include="Assets\Source\Spire\IUX\Interaction\IInteractive.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Interaction\IntentionManager.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Interaction\InteractionManager.cs" />
+    <Compile Include="Assets\Source\Spire\IUX\IUXTest.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Layer\ILayerable.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Layer\ILayerManager.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Layer\Layer.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Layer\LayerManager.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Layer\LayerMaskNames.cs" />
-    <Compile Include="Assets\Source\Spire\IUX\Activator\ActivatorMonoBehaviour.cs" />
-    <Compile Include="Assets\Source\Spire\IUX\Activator\IActivator.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Primitive\IPrimitiveFactory.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Primitive\IReticle.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Primitive\IText.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Primitive\PrimitiveFactory.cs" />
-    <Compile Include="Assets\Source\Spire\IUX\Primitive\PrimitiveRenderer.cs" />
+    <Compile Include="Assets\Source\Spire\IUX\Primitive\WidgetRenderer.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Primitive\ReticleMonoBehaviour.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Primitive\TextMonoBehaviour.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Primitive\WidgetMonoBehaviour.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Widget\Button.cs" />
-    <Compile Include="Assets\Source\Spire\IUX\Activator\ActivatorActivatedState.cs" />
-    <Compile Include="Assets\Source\Spire\IUX\Activator\ActivatorActivatingState.cs" />
-    <Compile Include="Assets\Source\Spire\IUX\Activator\ActivatorReadyState.cs" />
-    <Compile Include="Assets\Source\Spire\IUX\Activator\ActivatorState.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Widget\Caption.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Widget\ColorConfig.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Widget\IColorConfig.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Widget\ITweenConfig.cs" />
-    <Compile Include="Assets\Source\Spire\IUX\IUXTest.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Widget\IWidget.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Widget\IWidgetConfig.cs" />
     <Compile Include="Assets\Source\Spire\IUX\Widget\TweenConfig.cs" />
