--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,9 @@
 [Ll]ibrary/
 [Tt]emp/
 [Oo]bj/
-[Bb]uild/
-[Bb]uild_*/
-[Bb]uild.Jint.*/
-builds/
+Bbuilds/
 .Packages/
 .idea/
-Uwp/
 .DS_Store
 
 # Visual Studio 2015 cache directory
