--- a/Assets/Resources/ApplicationConfig.json
+++ b/Assets/Resources/ApplicationConfig.json
@@ -1,19 +1,22 @@
 {
-	"Version": "0.1.11",
-	"Log": {
-		"Level": "Error"
-	},
-	"Network": {
-		"ApiVersion": "0.0.1",
-		"Current": "cloud",
-		"AllEnvironments": [
-			{
-				"Name": "cloud",
-				"TrellisUrl": "https://trellis.enklu.com:10001/v1",
-				"AssetsUrl": "https://s3-us-west-2.amazonaws.com:443/axatmtcyltmxltqzltmw.assets.bundles/",
-				"BundlesUrl": "https://s3-us-west-2.amazonaws.com:443/axatmtcyltmxltqzltmw.assets.bundles/",
-				"ThumbsUrl": "https://s3-us-west-2.amazonaws.com:443/axatmtcyltmxltqzltmw.assets.thumbs/"
-			}
-		]
-	}
+    "Version": "0.1.11",
+    "Log": {
+        "Level": "Error"
+    },
+    "Network": {
+        "ApiVersion": "0.0.1",
+        "Current": "cloud",
+        "AllEnvironments": [
+            {
+                "Name": "cloud",
+                "TrellisUrl": "https://trellis.enklu.com:10001/v1",
+                "AssetsUrl": "https://s3-us-west-2.amazonaws.com:443/axatmtcyltmxltqzltmw.assets.bundles/",
+                "BundlesUrl": "https://s3-us-west-2.amazonaws.com:443/axatmtcyltmxltqzltmw.assets.bundles/",
+                "ThumbsUrl": "https://s3-us-west-2.amazonaws.com:443/axatmtcyltmxltqzltmw.assets.thumbs/"
+            }
+        ]
+    },
+    "Metrics": {
+        "Enabled": false
+    }
 }
