--- a/Assets/Resources/ApplicationConfig.json
+++ b/Assets/Resources/ApplicationConfig.json
@@ -1,7 +1,7 @@
 {
     "Version": "0.12.12",
     "Log": {
-        "Level": "Error"
+        "Level": "Info"
     },
 	"Metrics": {
 		"Enabled": false,
