Pull into override.

--- a/Assets/Resources/ApplicationConfig.WSAPlayerX86.json
+++ b/Assets/Resources/ApplicationConfig.WSAPlayerX86.json
@@ -4,8 +4,6 @@
     },
 	"Metrics": {
 		"Enabled": true,
-		"Targets": "HostedGraphite",
-		"Hostname": "1afe92f9.carbon.hostedgraphite.com",
-		"ApplicationKey": "3afe45ff-9423-4e41-b6c5-2b55b0be2c3d"
+		"Targets": "HostedGraphite"
 	}
 }
