--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,7 @@ Assets/Resources/ApplicationConfig.Override*
 
 # unit test output
 Tests.xml
+
+# Rider integration
+Assets/Plugins/Editor/JetBrains/
+Assets/Plugins/Editor/JetBrains.meta
