Updated anchor madness to use S3.

--- a/Assets/Resources/ApplicationConfig.json
+++ b/Assets/Resources/ApplicationConfig.json
@@ -16,7 +16,9 @@
                 "TrellisUrl": "https://cloud.enklu.com:10001/v1",
                 "AssetsUrl": "https://s3-us-west-2.amazonaws.com:443/axatmtcyltmxltqzltmw.assets.bundles/",
                 "BundlesUrl": "https://s3-us-west-2.amazonaws.com:443/axatmtcyltmxltqzltmw.assets.bundles/",
-                "ThumbsUrl": "https://s3-us-west-2.amazonaws.com:443/axatmtcyltmxltqzltmw.assets.thumbs/"
+                "ThumbsUrl": "https://s3-us-west-2.amazonaws.com:443/axatmtcyltmxltqzltmw.assets.thumbs/",
+                "AnchorsUrl": "https://s3-us-west-2.amazonaws.com:443/axatmtcyltmxltqzltmw.anchors/",
+                "ScriptsUrl": "https://s3-us-west-2.amazonaws.com:443/axatmtcyltmxltqzltmw.scripts/"
             }
         ]
     }
