--- a/build.uwp.gradle
+++ b/build.uwp.gradle
@@ -134,7 +134,6 @@ task runPublisherReplacement() {
         }
     }
 }
-runPublisherReplacement.dependsOn = [runUnity]
 
 task runCsc(type:Exec) {
     def configuration = project.hasProperty('store') && project.store ? 'Master' : 'Release'
@@ -145,7 +144,7 @@ task runCsc(type:Exec) {
     args "/p:Configuration=$configuration", '/p:Platform=x86'
     standardOutput System.out
 }
-runCsc.dependsOn = [runRestore, runPublisherReplacement]
+runCsc.dependsOn = [runRestore, runUnity]
 
 task runBuild() {
     doLast {
