--- a/Assets/Resources/ApplicationConfig.json
+++ b/Assets/Resources/ApplicationConfig.json
@@ -14,6 +14,8 @@
             {
                 "Name": "cloud",
                 "TrellisUrl": "https://cloud.enklu.com:10001/v1",
+                "MyceliumIp": "34.216.59.227",
+                "MyceliumPort": 10103,
                 "AssetsUrl": "https://s3-us-west-2.amazonaws.com:443/axatmtcyltmxltqzltmw.assets.bundles/",
                 "BundlesUrl": "https://s3-us-west-2.amazonaws.com:443/axatmtcyltmxltqzltmw.assets.bundles/",
                 "ThumbsUrl": "https://s3-us-west-2.amazonaws.com:443/axatmtcyltmxltqzltmw.assets.thumbs/",
