--- a/Assets/Resources/ApplicationConfig.WebGLPlayer.json
+++ b/Assets/Resources/ApplicationConfig.WebGLPlayer.json
@@ -1,5 +1,16 @@
 {
 	"Log": {
-        "Level": "Debug"
-    }
+        "Targets": [
+            {
+                "Target": "unity",
+                "Level": "Debug",
+                "IncludeLevel": false,
+                "IncludeTimestamp": false
+            },
+            {
+                "Target": "file",
+                "Enabled": false
+            }
+        ]
+    },
 }
