Rolled in both new generated trellis and stargazer messages. Added stargazer url to config. Stubs for PlayerSessions and Stargazer auth flow. Added new HTTP DLL with support for multiple service endpoints with unique sets of headers.

--- a/Assets/Resources/ApplicationConfig.json
+++ b/Assets/Resources/ApplicationConfig.json
@@ -26,6 +26,7 @@
             {
                 "Name": "cloud",
                 "TrellisUrl": "https://cloud.enklu.com:10001/v1",
+                "StargazerUrl": "https://cloud.enklu.com:9973/v1",
                 "MyceliumIp": "34.216.59.227",
                 "MyceliumPort": 10103,
                 "AssetsUrl": "https://s3-us-west-2.amazonaws.com:443/axatmtcyltmxltqzltmw.assets.bundles/",
@@ -33,7 +34,20 @@
                 "ThumbsUrl": "https://s3-us-west-2.amazonaws.com:443/axatmtcyltmxltqzltmw.assets.thumbs/",
                 "AnchorsUrl": "https://s3-us-west-2.amazonaws.com:443/axatmtcyltmxltqzltmw.anchors/",
                 "ScriptsUrl": "https://s3-us-west-2.amazonaws.com:443/axatmtcyltmxltqzltmw.scripts/"
-            }
+            },
+            {
+                "Name": "stage",
+                "TrellisUrl": "https://cloud-beta.enklu.com:10001/v1",
+                "StargazerUrl": "https://cloud-beta.enklu.com:9973/v1",
+                "MyceliumIp": "34.216.59.227",
+                "MyceliumPort": 10103,
+                "AssetsUrl": "https://s3-us-west-2.amazonaws.com:443/axatmtcyltmxltqzltmw.assets.bundles/",
+                "BundlesUrl": "https://s3-us-west-2.amazonaws.com:443/axatmtcyltmxltqzltmw.assets.bundles/",
+                "ThumbsUrl": "https://s3-us-west-2.amazonaws.com:443/axatmtcyltmxltqzltmw.assets.thumbs/",
+                "AnchorsUrl": "https://s3-us-west-2.amazonaws.com:443/axatmtcyltmxltqzltmw.anchors/",
+                "ScriptsUrl": "https://s3-us-west-2.amazonaws.com:443/axatmtcyltmxltqzltmw.scripts/"
+            },
+            
         ]
     }
 }
