--- a/Assets/Resources/ApplicationConfig.json
+++ b/Assets/Resources/ApplicationConfig.json
@@ -39,13 +39,13 @@
                 "Name": "stage",
                 "TrellisUrl": "https://cloud-beta.enklu.com:10001/v1",
                 "StargazerUrl": "https://cloud-beta.enklu.com:9973/v1",
-                "MyceliumIp": "34.216.59.227",
+                "MyceliumIp": "54.245.63.209",
                 "MyceliumPort": 10103,
-                "AssetsUrl": "https://s3-us-west-2.amazonaws.com:443/axatmtcyltmxltqzltmw.assets.bundles/",
-                "BundlesUrl": "https://s3-us-west-2.amazonaws.com:443/axatmtcyltmxltqzltmw.assets.bundles/",
-                "ThumbsUrl": "https://s3-us-west-2.amazonaws.com:443/axatmtcyltmxltqzltmw.assets.thumbs/",
-                "AnchorsUrl": "https://s3-us-west-2.amazonaws.com:443/axatmtcyltmxltqzltmw.anchors/",
-                "ScriptsUrl": "https://s3-us-west-2.amazonaws.com:443/axatmtcyltmxltqzltmw.scripts/"
+                "AssetsUrl": "https://s3-us-west-2.amazonaws.com:443/stage.assets.bundles/",
+                "BundlesUrl": "https://s3-us-west-2.amazonaws.com:443/stage.assets.bundles/",
+                "ThumbsUrl": "https://s3-us-west-2.amazonaws.com:443/stage.assets.thumbs/",
+                "AnchorsUrl": "https://s3-us-west-2.amazonaws.com:443/stage.anchors/",
+                "ScriptsUrl": "https://s3-us-west-2.amazonaws.com:443/stage.scripts/"
             },
             
         ]
